--- a/index.html
+++ b/index.html
@@ -2,44 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonnlogix Network | LIVE TRUCK TRACKER</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Sonnlogix Network | LIVE TRUCK TRACKER</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Services</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <section class="dashboard">
-            <h2>Truck Tracking Dashboard</h2>
-            <div id="map"></div> <!-- Placeholder for map -->
-            <table>
-                <thead>
-                    <tr>
-                        <th>Truck ID</th>
-                        <th>Driver Name</th>
-                        <th>Current Location</th>
-                        <th>Status</th>
-                        <th>Last Updated</th>
-                    </tr>
-                </thead>
-                <tbody id="truckTable"></tbody> <!-- JavaScript will populate this -->
-            </table>
-        </section>
-    </main>
+	<title>Head, Header and Headings</title>
+	</head>
+	<body>
+	<header>
+	<h1>My Heading</h1>
+	<nav>
+	<ul>
+	    <li><a href="index.html">Index</a></li>
+		<li><a href="table.html">Table</a></li>
+		<li><a href="#">Index</a></li>
+		</ul>
+		</nav>
+	  <header>
+	  <main>
+	  <h2>h2 Heading</h2>
+	  <p>Some Content</p>
+	  <h3> Heading</h3>
+	  <p>Some Content</p>
+	  <section>
+	    <h4> Heading</h4>
+	    <p>Some Content</p>
+	    <h5> Heading</h5>
+	    <p>Some Content</p>
+	  </section>
+	  </main>
+	 <footer>
+	    <p>Created by Danny Boy</p>
+	 </footer>
+   </body>
+	</html>
 
-    <footer>
-        <p>&copy; 2025 Sonnlogix Network. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
-</body>
-</html>
 
