--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,9 @@
  </head>
     <body>
   <h1>My Blog</h1>
-  <h2>h2</h2>
-  <h3>h3</h3>
-  <h4>h4</h4>
+  <h2>h2 header</h2>
+  <h3>h3 header</h3>
+  <h4>h4 header</h4>
    <div class="my_class bold font">
  <p>My class</p>
     </div>
