--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>My Heading</h1>
 	<nav>
 	<ul>
-	    <li><a href="index.html">index2</a></li>
+	    <li><a href="index2.html">Index</a></li>
 		<li><a href="table.html">Table</a></li>
 		<li><a href="#">Index</a></li>
 		</ul>
@@ -32,6 +32,7 @@
 	 </footer>
    </body>
 	</html>
+
 
 
 
